--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <source src="./assets/videos/dog-video.mp4" />
           <track
             src="./assets/text-tracks/dog-video.vtt"
-            kind="subtitles"
+            kind="captions"
             srclang="en"
             label="English"
           /></video
@@ -45,7 +45,15 @@
           just make up some subtitles! Create your own time stamps and invent
           your own dialog!
         </p>
-        <!-- TODO: Put the pigeons in love MP4 video here-->
+        <video controls>
+          <source src="./assets/videos/pigeons-in-love.mp4" />
+          <track
+            src="./assets/text-tracks/pigeons-in-love-english.vtt"
+            kind="subtitles"
+            srclang="English"
+            label="English Subtitles"
+          /></video
+        ><!-- TODO: Put the pigeons in love MP4 video here-->
         <!-- This video should have controls and two track tags (for example, for English AND French subtitles) -->
       </div>
     </main>
